# rzn_rpa_tabulados

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml  test.yml
docs/: index.md
referencia/: index.html
search/: search_index.json
tests/: test_basico.py
