[tool.poetry]
name = 'rzn-rpa-tabulados'
version = '0.1.0'
description = 'Biblioteca para manipulação de dados tabulados em projetos de automação (RPA)'
authors = ['Thiago Serra <thiago.serra@raizen.com>']
readme = 'README.md'

[tool.poetry.dependencies]
python = '^3.12'

[tool.poetry.group.dev.dependencies]
pytest = '^8.2.1'
coverage = '^7.5.1'
ruff = '^0.4.4'
taskipy = '^1.12.2'

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
pre_test = 'task lint'
test = 'pytest -s -x --cov=rzn_rpa_tabulados -vv'
post_test = 'coverage html'

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
